# discord_bot

./: .gitignore  Cargo.toml
migrations/: 20250419001143_create_users_and_social_credit.sql
src/: logger.rs  main.rs  social_credit.rs
src/db/: leaderboard.rs  mod.rs
src/handler/: check.rs  leaderboard.rs  mod.rs
src/models/: leaderboard.rs  mod.rs
